[package]
name = "quasar-carnival"
version = "0.1.0"
edition = "2021"

# Standalone workspace — not part of the root program-examples workspace.
# Quasar uses a different resolver and dependency tree.
[workspace]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]

[lib]
crate-type = ["cdylib"]

[features]
alloc = []
client = []
debug = []

[dependencies]
# quasar pin rationale: master HEAD currently fails to compile because zeropod 0.3.x
# auto-generates accessor methods that conflict with hand-written ones in quasar-spl
# (E0592 duplicate definitions for delegate / close_authority / mint_authority /
# freeze_authority). Upstream fix is on the zeropod branch (skip_accessor + bump),
# not yet merged to master. 623bb70 is the last working rev on master before zeropod
# 0.3 was bumped. Unpin (back to branch = "master") once upstream merges the fix.
quasar-lang = { git = "https://github.com/blueshift-gg/quasar", rev = "623bb70" }
solana-instruction = { version = "3.2.0" }

[dev-dependencies]
quasar-svm = { git = "https://github.com/blueshift-gg/quasar-svm" }
solana-account = { version = "3.4.0" }
solana-address = { version = "2.2.0", features = ["decode"] }
solana-instruction = { version = "3.2.0", features = ["bincode"] }
solana-pubkey = { version = "4.1.0" }
