[package]
name = "quasar-nft-minter"
version = "0.1.0"
edition = "2021"

# Standalone workspace — not part of the root program-examples workspace.
# Quasar uses a different resolver and dependency tree.
[workspace]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]

[lib]
crate-type = ["cdylib", "lib"]

[features]
alloc = []
client = []
debug = []

[dependencies]
# All quasar deps share branch = "master" so trait impls resolve consistently.
# quasar pin rationale: master HEAD currently fails to compile because zeropod 0.3.x
# auto-generates accessor methods that conflict with hand-written ones in quasar-spl
# (E0592 duplicate definitions for delegate / close_authority / mint_authority /
# freeze_authority). Upstream fix is on the zeropod branch (skip_accessor + bump),
# not yet merged to master. 623bb70 is the last working rev on master before zeropod
# 0.3 was bumped. Unpin (back to branch = "master") once upstream merges the fix.
quasar-lang = { git = "https://github.com/blueshift-gg/quasar", rev = "623bb70" }
quasar-spl = { git = "https://github.com/blueshift-gg/quasar", rev = "623bb70" }
# Metaplex metadata moved out of quasar-spl into a dedicated crate (PR #196).
quasar-metadata = { git = "https://github.com/blueshift-gg/quasar", rev = "623bb70" }
solana-instruction = { version = "3.2.0" }

[dev-dependencies]
quasar-svm = { git = "https://github.com/blueshift-gg/quasar-svm" }
spl-token-interface = { version = "2.0.0" }
solana-program-pack = { version = "3.1.0" }
