[package]
name = "quasar-spl-token-minter"
version = "0.1.0"
edition = "2021"

# Standalone workspace — not part of the root program-examples workspace.
# Quasar uses a different resolver and dependency tree.
[workspace]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]

[lib]
crate-type = ["cdylib", "lib"]

[features]
alloc = []
client = []
debug = []

[dependencies]
# All quasar deps share one source-id (branch = "master") so trait-impls
# resolve consistently — mixing `{ git = ... }` with `{ git = ..., branch = "master" }`
# was treated by Cargo as two distinct sources of the same crate.
quasar-lang = { git = "https://github.com/blueshift-gg/quasar", branch = "master" }
quasar-spl = { git = "https://github.com/blueshift-gg/quasar", branch = "master" }
# Metaplex metadata moved out of quasar-spl into its own crate (PR #196).
quasar-metadata = { git = "https://github.com/blueshift-gg/quasar", branch = "master" }
solana-instruction = { version = "3.2.0" }

[dev-dependencies]
quasar-svm = { git = "https://github.com/blueshift-gg/quasar-svm" }
spl-token-interface = { version = "2.0.0" }
solana-program-pack = { version = "3.1.0" }
